# geojson-projection-exercise

./: .gitignore  Cargo.toml  OPTIMIZATION_TECHNIQUES.md  PERFORMANCE.md  TESTING_STRATEGY.md
.github/workflows/: workflow.yaml
benches/: large_geometry_benchmarks.rs
src/: buffer_pool.rs  conversions.rs  coordinates.rs  error.rs  geometry_processor.rs  helpers.rs  lib.rs  main.rs  pool.rs  simplification.rs  transformer.rs
src/pool/: mod.rs
tests/: lib.rs
tests/fixtures/: mod.rs
tests/helpers/: mod.rs
tests/unit/: buffer_pool.rs  complex_geometries.rs  geometry_processor.rs  mod.rs
