[package]
name = "proj-exercise-simple"
version = "0.1.0"
edition = "2021"

[dependencies]
proj = "0.28.0"
geojson = "0.24.1"
serde_json = "1.0"
geo = "0.25.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "large_geometry_benchmarks"
harness = false
